// Copyright 2024 Bytebase Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bytebase.v1;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "v1/common.proto";

option go_package = "github.com/bytebase/bytebase/backend/generated-go/v1";
option java_multiple_files = true;
option java_package = "com.bytebase.v1";
option java_outer_classname = "SensitiveLevelServiceProto";
option objc_class_prefix = "V1";

// SensitiveLevelService handles sensitive data level configuration.
service SensitiveLevelService {
  // CreateSensitiveLevel creates a new sensitive data level configuration.
  rpc CreateSensitiveLevel(CreateSensitiveLevelRequest) returns (SensitiveLevel) {
    option (google.api.http) = {
      post: "/v1/sensitive-levels"
      body: "sensitive_level"
    };
  }

  // GetSensitiveLevel gets a sensitive data level configuration.
  rpc GetSensitiveLevel(GetSensitiveLevelRequest) returns (SensitiveLevel) {
    option (google.api.http) = {
      get: "/v1/{name=sensitiveLevels/*}"
    };
  }

  // ListSensitiveLevels lists all sensitive data level configurations.
  rpc ListSensitiveLevels(ListSensitiveLevelsRequest) returns (ListSensitiveLevelsResponse) {
    option (google.api.http) = {
      get: "/v1/sensitive-levels"
    };
  }

  // UpdateSensitiveLevel updates a sensitive data level configuration.
  rpc UpdateSensitiveLevel(UpdateSensitiveLevelRequest) returns (SensitiveLevel) {
    option (google.api.http) = {
      patch: "/v1/{sensitive_level.name=sensitiveLevels/*}"
      body: "sensitive_level"
    };
  }

  // DeleteSensitiveLevel deletes a sensitive data level configuration.
  rpc DeleteSensitiveLevel(DeleteSensitiveLevelRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=sensitiveLevels/*}"
    };
  }
}

// SensitiveLevel represents a sensitive data level configuration.
message SensitiveLevel {
  // Output only. The resource name of the sensitive level.
  string name = 1;

  // Required. The name of the sensitive level.
  string display_name = 2;

  // The description of the sensitive level.
  string description = 3;

  // Required. The level of sensitivity.
  SensitivityLevel level = 4;

  // Required. The database table this level applies to.
  string table_name = 5;

  // Required. The schema of the table.
  string schema_name = 6;

  // Required. The database instance ID.
  string instance_id = 7;

  // The matching rules for sensitive fields.
  repeated FieldMatchingRule field_rules = 8;

  // Output only. The time when the sensitive level was created.
  google.protobuf.Timestamp create_time = 9;

  // Output only. The time when the sensitive level was last updated.
  google.protobuf.Timestamp update_time = 10;
}

// SensitivityLevel represents the sensitivity level of data.
enum SensitivityLevel {
  // Unspecified sensitivity level.
  SENSITIVITY_LEVEL_UNSPECIFIED = 0;
  // Low sensitivity data.
  SENSITIVITY_LEVEL_LOW = 1;
  // Medium sensitivity data.
  SENSITIVITY_LEVEL_MEDIUM = 2;
  // High sensitivity data.
  SENSITIVITY_LEVEL_HIGH = 3;
}

// FieldMatchingRule represents a rule for matching sensitive fields.
message FieldMatchingRule {
  // Required. The type of matching rule.
  MatchingRuleType type = 1;

  // Required. The pattern to match.
  string pattern = 2;

  // The description of the rule.
  string description = 3;
}

// MatchingRuleType represents the type of field matching rule.
enum MatchingRuleType {
  // Unspecified matching rule type.
  MATCHING_RULE_TYPE_UNSPECIFIED = 0;
  // Match by exact field name.
  MATCHING_RULE_TYPE_FIELD_NAME = 1;
  // Match by data type.
  MATCHING_RULE_TYPE_DATA_TYPE = 2;
  // Match by regular expression.
  MATCHING_RULE_TYPE_REGEX = 3;
}

// CreateSensitiveLevelRequest is the request for CreateSensitiveLevel.
message CreateSensitiveLevelRequest {
  // Required. The sensitive level to create.
  SensitiveLevel sensitive_level = 1;
}

// GetSensitiveLevelRequest is the request for GetSensitiveLevel.
message GetSensitiveLevelRequest {
  // Required. The name of the sensitive level to retrieve.
  string name = 1;
}

// ListSensitiveLevelsRequest is the request for ListSensitiveLevels.
message ListSensitiveLevelsRequest {
  // Optional. Filter sensitive levels by instance ID.
  string instance_id = 1;

  // Optional. Filter sensitive levels by schema name.
  string schema_name = 2;

  // Optional. Filter sensitive levels by table name.
  string table_name = 3;

  // Optional. Filter sensitive levels by sensitivity level.
  SensitivityLevel level = 4;

  // Optional. The maximum number of sensitive levels to return.
  int32 page_size = 5;

  // Optional. The page token, returned from a previous ListSensitiveLevels call,
  // to retrieve the next page of results.
  string page_token = 6;
}

// ListSensitiveLevelsResponse is the response for ListSensitiveLevels.
message ListSensitiveLevelsResponse {
  // The list of sensitive levels.
  repeated SensitiveLevel sensitive_levels = 1;

  // The page token to use to retrieve the next page of results.
  string next_page_token = 2;
}

// UpdateSensitiveLevelRequest is the request for UpdateSensitiveLevel.
message UpdateSensitiveLevelRequest {
  // Required. The sensitive level to update.
  SensitiveLevel sensitive_level = 1;

  // Required. The field mask indicating which fields to update.
  google.protobuf.FieldMask update_mask = 2;
}

// DeleteSensitiveLevelRequest is the request for DeleteSensitiveLevel.
message DeleteSensitiveLevelRequest {
  // Required. The name of the sensitive level to delete.
  string name = 1;
}